Improved code efficiency